interface improvements, refactor pagination implementation
