# src/app/generated-apis/tatoo-work/model/models.ts
@@ -3,5 +3,6 @@ export * from './errorResponse';
 export * from './madeByInfo';
 export * from './tattooWorkPatchRequestDto';
 export * from './tattooWorkPostRequestDto';
+export * from './tattooWorkResponsePageable';
 export * from './tattooWorksResponseDto';
 export * from './workingDays';
