# src/app/generated-apis/tatoo-work/model/tattooWorkResponsePageable.ts
@@ -1,0 +1,19 @@
+/**
+ * tattoo-work-contract
+ * tattoo-work
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { TattooWorksResponseDto } from './tattooWorksResponseDto';
+
+
+export interface TattooWorkResponsePageable { 
+    totalElements?: number;
+    tattooWorks?: Array<TattooWorksResponseDto>;
+}
+
