# src/app/generated-apis/user/model/userResponseDtoPageable.ts
@@ -1,0 +1,19 @@
+/**
+ * user-generated-contract
+ * user-generated-contract
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { UserResponseDto } from './userResponseDto';
+
+
+export interface UserResponseDtoPageable { 
+    totalElements?: number;
+    tattooArtists?: Array<UserResponseDto>;
+}
+
